--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.5/dist/mindar-image-three.production.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
-
+  <meta charset="UTF-8">
+  <title>AR Experience</title>
+  <!-- MindAR bundle with Three.js included -->
+  <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.5/dist/mindar-image-three.prod.js"></script>
   <style>
     body, html { margin: 0; overflow: hidden; }
     #ar-container { width: 100%; height: 100vh; }
@@ -16,31 +17,31 @@
     // Initialize MindAR
     const mindarThree = new window.MINDAR.IMAGE.MindARThree({
       container: document.querySelector("#ar-container"),
-      imageTargetSrc: "targets.mind", // your uploaded file
+      imageTargetSrc: "targets.mind", // your uploaded target
     });
 
     const {renderer, scene, camera} = mindarThree;
 
-    // Anchor for the first target (index 0)
+    // Create anchor for the first target
     const anchor = mindarThree.addAnchor(0);
 
-    // Video presenter
+    // Create video element (placeholder or real presenter)
     const video = document.createElement("video");
-    video.src = "host.webm";       // your presenter video
+    video.src = "host.webm"; // your video file
     video.autoplay = false;
     video.loop = true;
     video.muted = true;
     video.playsInline = true;
 
-    // Scale based on real QR code size (3x3 inches ≈ 0.0762 m)
-    const physicalWidth = 0.0762;
-    const height = physicalWidth * 1.78; // adjust aspect ratio
+    // Scale video to match 3x3 inch QR marker (~0.0762 meters)
+    const physicalWidth = 0.0762; // meters
+    const height = physicalWidth * 1.78; // adjust aspect ratio for video
     const geometry = new THREE.PlaneGeometry(physicalWidth, height);
     const texture = new THREE.VideoTexture(video);
     const material = new THREE.MeshBasicMaterial({map: texture, transparent: true});
     const plane = new THREE.Mesh(geometry, material);
 
-    // Add video to the anchor
+    // Add video plane to the anchor
     anchor.group.add(plane);
 
     // Play/pause video on target found/lost
@@ -49,7 +50,9 @@
 
     // Start MindAR
     mindarThree.start();
-    renderer.setAnimationLoop(() => { renderer.render(scene, camera); });
+    renderer.setAnimationLoop(() => {
+      renderer.render(scene, camera);
+    });
   </script>
 </body>
 </html>
