--- a/index.html
+++ b/index.html
@@ -1,68 +1,92 @@
-
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="importmap">
-    {
-      "imports": {
-	"three": "https://unpkg.com/three@0.160.0/build/three.module.js",
-	"three/addons/": "https://unpkg.com/three@0.160.0/examples/jsm/",
-	"mindar-image-three":"https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-three.prod.js"
-      }
+<head>
+  <meta charset="UTF-8">
+  <title>AR Experience</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Import map for modules -->
+  <script type="importmap">
+  {
+    "imports": {
+      "three": "https://unpkg.com/three@0.160.0/build/three.module.js",
+      "mindar-image-three": "https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-three.prod.js"
     }
-    </script>
-    <script type="module">
-      import * as THREE from 'three';
-      import { MindARThree } from 'mindar-image-three';
-      const mindarThree = new MindARThree({
-	container: document.querySelector("#container"),
-	imageTargetSrc: "https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/image-tracking/assets/card-example/card.mind"
-      });
-      const {renderer, scene, camera} = mindarThree;
-      const anchor = mindarThree.addAnchor(0);
-      const geometry = new THREE.PlaneGeometry(1, 0.55);
-      const material = new THREE.MeshBasicMaterial( {color: 0x00ffff, transparent: true, opacity: 0.5} );
-      const plane = new THREE.Mesh( geometry, material );
-      anchor.group.add(plane);
-      const start = async() => {
-	await mindarThree.start();
-	renderer.setAnimationLoop(() => {
-	  renderer.render(scene, camera);
-	});
-      }
-      const startButton = document.querySelector("#startButton");
-      startButton.addEventListener("click", () => {
-	start();
-      });
-      stopButton.addEventListener("click", () => {
-	mindarThree.stop();
-	mindarThree.renderer.setAnimationLoop(null);
-      });
-    </script>
-    <style>
-      body {
-	margin: 0;
-      }
-      #container {
-	width: 100vw;
-	height: 100vh;
-	position: relative;
-	overflow: hidden;
-      }
-      #control {
-	position: fixed;
-	top: 0;
-	left: 0;
-	z-index: 2;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="control">
-      <button id="startButton">Start</button>
-      <button id="stopButton">Stop</button>
-    </div>
-    <div id="container">
-    </div>
-  </body>
+  }
+  </script>
+
+  <script type="module">
+    import * as THREE from 'three';
+    import { MindARThree } from 'mindar-image-three';
+
+    const container = document.querySelector("#container");
+    const startButton = document.querySelector("#startButton");
+    const stopButton = document.querySelector("#stopButton");
+
+    const mindarThree = new MindARThree({
+      container: container,
+      imageTargetSrc: "targets.mind" // your uploaded MindAR target
+    });
+
+    const {renderer, scene, camera} = mindarThree;
+    const anchor = mindarThree.addAnchor(0);
+
+    // Video element (placeholder or your presenter)
+    const video = document.createElement("video");
+    video.src = "host.webm"; // replace with your video later
+    video.autoplay = false;
+    video.loop = true;
+    video.muted = true;
+    video.playsInline = true;
+
+    // Scale video to 3x3 inch QR marker (~0.0762 m)
+    const physicalWidth = 0.0762; 
+    const height = physicalWidth * 1.78; // adjust aspect ratio
+    const geometry = new THREE.PlaneGeometry(physicalWidth, height);
+    const texture = new THREE.VideoTexture(video);
+    const material = new THREE.MeshBasicMaterial({map: texture, transparent: true});
+    const plane = new THREE.Mesh(geometry, material);
+    anchor.group.add(plane);
+
+    // Play/pause video on target found/lost
+    anchor.onTargetFound = () => { video.play(); };
+    anchor.onTargetLost = () => { video.pause(); };
+
+    // Start MindAR
+    const start = async() => {
+      await mindarThree.start();
+      renderer.setAnimationLoop(() => { renderer.render(scene, camera); });
+    };
+
+    startButton.addEventListener("click", () => { start(); });
+    stopButton.addEventListener("click", () => {
+      mindarThree.stop();
+      renderer.setAnimationLoop(null);
+      video.pause();
+    });
+  </script>
+
+  <style>
+    body, html { margin: 0; overflow: hidden; }
+    #container { width: 100vw; height: 100vh; position: relative; overflow: hidden; }
+    #control {
+      position: fixed;
+      top: 10px;
+      left: 10px;
+      z-index: 2;
+      background: rgba(255,255,255,0.8);
+      padding: 5px;
+      border-radius: 5px;
+    }
+    button { margin: 2px; padding: 5px 10px; }
+  </style>
+</head>
+
+<body>
+  <div id="control">
+    <button id="startButton">Start</button>
+    <button id="stopButton">Stop</button>
+  </div>
+  <div id="container"></div>
+</body>
 </html>
