--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>AR Experience</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Import map for modules -->
+  <!-- Import map for ES Modules -->
   <script type="importmap">
   {
     "imports": {
@@ -15,60 +15,9 @@
   }
   </script>
 
-  <script type="module">
-    import * as THREE from 'three';
-    import { MindARThree } from 'mindar-image-three';
-
-    const container = document.querySelector("#container");
-    const startButton = document.querySelector("#startButton");
-    const stopButton = document.querySelector("#stopButton");
-
-    const mindarThree = new MindARThree({
-      container: container,
-      imageTargetSrc: "targets.mind" // your uploaded MindAR target
-    });
-
-    const {renderer, scene, camera} = mindarThree;
-    const anchor = mindarThree.addAnchor(0);
-
-    // Video element (placeholder or your presenter)
-    const video = document.createElement("video");
-    video.src = "host.webm"; // replace with your video later
-    video.autoplay = false;
-    video.loop = true;
-    video.muted = true;
-    video.playsInline = true;
-
-    // Scale video to 3x3 inch QR marker (~0.0762 m)
-    const physicalWidth = 0.0762; 
-    const height = physicalWidth * 1.78; // adjust aspect ratio
-    const geometry = new THREE.PlaneGeometry(physicalWidth, height);
-    const texture = new THREE.VideoTexture(video);
-    const material = new THREE.MeshBasicMaterial({map: texture, transparent: true});
-    const plane = new THREE.Mesh(geometry, material);
-    anchor.group.add(plane);
-
-    // Play/pause video on target found/lost
-    anchor.onTargetFound = () => { video.play(); };
-    anchor.onTargetLost = () => { video.pause(); };
-
-    // Start MindAR
-    const start = async() => {
-      await mindarThree.start();
-      renderer.setAnimationLoop(() => { renderer.render(scene, camera); });
-    };
-
-    startButton.addEventListener("click", () => { start(); });
-    stopButton.addEventListener("click", () => {
-      mindarThree.stop();
-      renderer.setAnimationLoop(null);
-      video.pause();
-    });
-  </script>
-
   <style>
     body, html { margin: 0; overflow: hidden; }
-    #container { width: 100vw; height: 100vh; position: relative; overflow: hidden; }
+    #container { width: 100vw; height: 100vh; position: relative; }
     #control {
       position: fixed;
       top: 10px;
@@ -88,5 +37,64 @@
     <button id="stopButton">Stop</button>
   </div>
   <div id="container"></div>
+
+  <script type="module">
+    import * as THREE from 'three';
+    import { MindARThree } from 'mindar-image-three';
+
+    const container = document.querySelector("#container");
+    const startButton = document.querySelector("#startButton");
+    const stopButton = document.querySelector("#stopButton");
+
+    // Initialize MindAR
+    const mindarThree = new MindARThree({
+      container: container,
+      imageTargetSrc: "targets.mind" // your uploaded target
+    });
+
+    const {renderer, scene, camera} = mindarThree;
+    const anchor = mindarThree.addAnchor(0);
+
+    // Video element (placeholder or real presenter)
+    const video = document.createElement("video");
+    video.src = "host.webm"; // replace with your video later
+    video.autoplay = false;
+    video.loop = true;
+    video.muted = true;
+    video.playsInline = true;
+
+    // Scale video to 3x3 inch QR (~0.0762 m)
+    const physicalWidth = 0.0762;
+    const height = physicalWidth * 1.78; // adjust aspect ratio
+    const geometry = new THREE.PlaneGeometry(physicalWidth, height);
+    const texture = new THREE.VideoTexture(video);
+    const material = new THREE.MeshBasicMaterial({map: texture, transparent: true});
+    const plane = new THREE.Mesh(geometry, material);
+    anchor.group.add(plane);
+
+    // Play/pause video on target found/lost
+    anchor.onTargetFound = () => { video.play(); };
+    anchor.onTargetLost = () => { video.pause(); };
+
+    // Start MindAR on button click
+    startButton.addEventListener("click", async () => {
+      try {
+        await mindarThree.start();
+        video.play(); // ensure video plays
+        renderer.setAnimationLoop(() => {
+          renderer.render(scene, camera);
+        });
+      } catch(e) {
+        console.error("AR start failed:", e);
+      }
+    });
+
+    // Stop AR
+    stopButton.addEventListener("click", () => {
+      mindarThree.stop();
+      renderer.setAnimationLoop(null);
+      video.pause();
+    });
+  </script>
 </body>
 </html>
