--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script src="https://aframe.io.0/aframe.min.js</script>
-    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.ar-image-aframe.prod.js</script>
+    https://aframe.io/releases/1.6.0/aframe.min.js</script>
+    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.-image-aframe.prod.js</script>
   </head>
   <body>
     <a-scene mindar-image="imageTargetSrc: ./targets.mind;" color-space="sRGB"
@@ -11,10 +11,12 @@
              device-orientation-permission-ui="enabled: false">
       
       <a-assets>
-        <img id="card" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/image-tracking/assets/card      <a-asset-item id="avatarModel" src="https://cdn.jsdelivr.net/gh/hiukim/mind-arsets/card-example/softmind/scene.gltf</a-asset-item>
+        <img id="card" src="https://cdn.jsdelivr.net/gh/hiukim/mind-armage-tracking/assets/card-example/card.png
+        <a-asset-item id="avatarModel" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/imagend/scene.gltf</a-asset-item>
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
       <a-entity mindar-image-target="targetIndex: 0">
-        <a-plane src="#card" position="0 0 0" height="0.552" width="1" rotation="0 0ale="0.005 0.005 0.005" src="#avatarModel"
+        #card</a-plane>
+        <a-gltf-model rotation="0 0 0" position="0 0 0.1" scale="0.005 0.005 0.005" src="#avatarModel"
