--- a/index.html
+++ b/index.html
@@ -7,17 +7,23 @@
   </head>
   <body>
 	<a-scene mindar-image="imageTargetSrc: ./targets.mind;">
-	  <a-assets>
-	    <img id="card" src="./ar_qrcode.png" />
-	    <a-asset-item id="avatarModel" src="..."></a-asset-item>
-	  </a-assets>
+		<a-assets>
+		  <img id="card" src="./ar_qrcode.png" />
+		  <video id="hostVideo" src="./host.webm" loop="true" autoplay="true" playsinline></video>
+		</a-assets>
 	
 	  <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 	
-	  <a-entity mindar-image-target="targetIndex: 0">
-	    <a-plane src="#card" position="0 0 0" height="0.552" width="1"></a-plane>
-	    <a-gltf-model src="#avatarModel" ...></a-gltf-model>
-	  </a-entity>
+		<a-entity mindar-image-target="targetIndex: 0">
+		  <a-plane src="#card" position="0 0 0" height="1" width="1"></a-plane>
+		
+		  <a-video
+		    src="#hostVideo"
+		    width="1"
+		    height="0.6"
+		    position="0 0 0.1">
+		  </a-video>
+		</a-entity>
 	</a-scene>
   </body>
 </html>
