--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 	<a-scene mindar-image="imageTargetSrc: ./targets.mind;">
 		<a-assets>
 		  <img id="card" src="./ar_qrcode.png" />
-		  <video id="hostVideo" src="./host.webm" loop="true" autoplay="true" playsinline></video>
+		  <video id="hostVideo"
+		         src="./host.webm"
+		         loop="true"
+		         autoplay="true"
+		         playsinline
+		         webkit-playsinline>
+		  </video>
 		</a-assets>
 	
 	  <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
