--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	  <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 	
 		<a-entity mindar-image-target="targetIndex: 0">
-		  <a-plane src="#card" position="0 0 0" height="1" width="1"></a-plane>
+		<!-- <a-plane src="#card" position="0 0 0" height="1" width="1"></a-plane> -->
 		
 		  <a-video
 		    src="#hostVideo"
