--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -6,31 +5,38 @@
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
   </head>
   <body>
-	<a-scene mindar-image="imageTargetSrc: ./targets.mind;">
-		<a-assets>
-		  <img id="card" src="./ar_qrcode.png" />
-		<video id="hostVideo"
-		       src="./host.webm"
-		       loop
-		       autoplay
-		       muted
-		       playsinline
-		       webkit-playsinline>
-		</video>
-		</a-assets>
-	
-	  <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
-	
-		<a-entity mindar-image-target="targetIndex: 0">
-		<!-- <a-plane src="#card" position="0 0 0" height="1" width="1"></a-plane> -->
-		
-		  <a-video
-		    src="#hostVideo"
-		    width="1"
-		    height="0.6"
-		    position="0 0 0.1">
-		  </a-video>
-		</a-entity>
-	</a-scene>
+    <a-scene mindar-image="imageTargetSrc: ./targets.mind;">
+      <a-assets>
+        <video id="hostVideo"
+               src="./host.webm"
+               loop
+               autoplay
+               muted
+               playsinline
+               webkit-playsinline>
+        </video>
+      </a-assets>
+
+      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+
+      <a-entity mindar-image-target="targetIndex: 0">
+        <a-video
+          src="#hostVideo"
+          width="1"
+          height="0.6"
+          position="0 0 0.1">
+        </a-video>
+      </a-entity>
+    </a-scene>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        const scene = document.querySelector("a-scene");
+        const video = document.getElementById("hostVideo");
+
+        scene.addEventListener("targetFound", () => video.play());
+        scene.addEventListener("targetLost", () => video.pause());
+      });
+    </script>
   </body>
 </html>
