Replace video element with image plane in HTML

--- a/index.html
+++ b/index.html
@@ -7,26 +7,19 @@
   <body>
     <a-scene mindar-image="imageTargetSrc: ./targets.mind;">
       <a-assets>
-        <video id="hostVideo"
-               src="./host.webm"
-               loop
-               autoplay
-               muted
-               playsinline
-               webkit-playsinline>
-        </video>
+        <img id="myImage" src="./myImage.png" />
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-      <a-entity mindar-image-target="targetIndex: 0">
-        <a-video
-          src="#hostVideo"
-          width="1"
-          height="0.6"
-          position="0 0 0.1">
-        </a-video>
-      </a-entity>
+    <a-entity mindar-image-target="targetIndex: 0">
+      <a-plane 
+        src="#myImage"
+        width="1"
+        height="0.6"
+        position="0 0 0.1">
+      </a-plane>
+    </a-entity>
     </a-scene>
 
     <script>
